# select_course

./: .env  Cargo.toml  Config.toml  Dockerfile
.cargo/: config.toml
common/: Cargo.toml
common/src/: lib.rs
common/src/config/: mod.rs
common/src/crypto/: aes.rs  hash.rs  mod.rs
common/src/middleware/: auth.rs
common/src/util/: auth.rs  response.rs
migrations/2023-12-12-045424_course/: down.sql  up.sql
src/: main.rs  schema.rs
src/class/: mod.rs
src/class/data_model/: mod.rs
src/class/handler/: mod.rs
src/class/model/: mod.rs
src/course/model/: mod.rs
src/speciality/: mod.rs
src/speciality/data_model/: mod.rs
src/speciality/handle/: mod.rs
src/speciality/model/: mod.rs
src/user/: mod.rs
src/user/data_model/: course.rs  mod.rs
src/user/handle/: user.rs
src/user/model/: mod.rs  user.rs
src/user_course/: mod.rs
src/user_course/handle/: mod.rs  search.rs
src/user_course/model/: mod.rs
