[package]
name = "select_course"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members  = ["common"]

[dependencies]
common = {path = "common"}
actix-web = "4.4.0"
env_logger = "0.10.0"
log = "0.4.20"
mongodb = "2.7.0"
chrono = "0.4.31"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
diesel = { version = "2.1.0", features = [ "mysql", "serde_json", "numeric","r2d2"] }
dotenv = "0.15.0"




