[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
md-5 = "0.10.6"
openssl = "0.10.57"
sea-orm = "0.12.4"
sha1 = "0.10.6"
sha2 = "0.10.8"
tracing = "0.1.40"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
toml = "0.8.4"
mongodb = "2.7.0"
anyhow = "1.0.75"
base64 = "0.21.5"
cipher = "0.4.4"
const-hex = "1.9.1"
digest = "0.10.7"
hmac = "0.12.1"
futures-util = "0.3.28"
diesel = { version = "2.1.0", features = ["chrono", "mysql", "r2d2", "serde_json", "numeric"] }

